--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.14",
     "@types/prettier": "^2.7.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/src/index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/server.ts",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
