--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/server.ts",
-    "start": "node index.js",
+    "start": "node index.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
