--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.10",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "main": "./api/server"
   },
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/server.ts",
-    "start": "api/server.ts",
+    "postinstall": "tsc",
+    "start": "node api/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
