--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"target": "ES2016",
 		"module": "commonjs",
 		"lib": [
 			"dom",
@@ -10,7 +10,7 @@
 		],
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"outDir": "./dist",
+		"outDir": "./build",
 		"moduleResolution": "node",
 		"removeComments": true,
 		"noImplicitAny": true,
@@ -26,7 +26,6 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"resolveJsonModule": true,
-		"baseUrl": "."
 	},
 	"exclude": ["node_modules"],
 	"include": ["./api/src/**/*.tsx", "./api/src/**/*.ts"]
