--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "heroku-postbuild": "cd client && npm i && npm run build"
   },
   "engines": {
-    "node": "^12.20.0 || >=14.13.1"
+    "node": "16.18"
   },
   "eslintConfig": {
     "extends": [
