--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "typeorm": "^0.3.10",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
-    "main": "./api/server"
+    "main": "/api/server.js"
   },
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/server.ts",
     "postinstall": "tsc",
-    "start": "node api/server.ts",
+    "start": "node api/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "cd client && npm i && npm run build"
   },
   "engines": {
-    "node": "16.18"
+    "node": "14.15.4",
+    "npm": "6.14.11"
   },
   "eslintConfig": {
     "extends": [
