--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "start": "node api/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "cd client && npm i && npm run build"
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "14.15.4",
