--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "main": "/api/server.js",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
@@ -22,8 +23,7 @@
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.10",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4",
-    "main": "/api/server.js"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' api/server.ts",
