--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "14.15.4",
+    "node": "^16.18",
     "npm": "6.14.11"
   },
   "eslintConfig": {
