--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
 		"resolveJsonModule": true,
 	},
 	"exclude": ["node_modules"],
-	"include": ["./api/src/**/*.tsx", "./api/src/**/*.ts"]
+	"include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
