--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd client && npm i && npm run build"
   },
   "engines": {
     "node": "^16.18",
