edit start script

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' server.ts",
     "postinstall": "tsc",
-    "start": "server.ts",
+    "start": "node server.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
