--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.1.2",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.10",
     "typescript": "^4.8.4",
@@ -27,7 +28,7 @@
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' server.ts",
     "postinstall": "tsc",
-    "start": "node server.ts",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
