--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
+  "main": "server.ts",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' server.ts",
     "postinstall": "tsc",
-    "start": "serve -s build",
+    "start": "node server.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
