--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -31,5 +31,5 @@
 		"baseUrl": "."
 	},
 	"exclude": ["node_modules"],
-	"include": ["./src/**/*.tsx", "./src/**/*.ts"]
+	"include": ["./src/**/*.tsx", "./src/**/*.ts", "./src/**/*.style.ts"]
 }
