--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/prettier": "^2.7.1",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "antd": "^5.1.2",
     "axios": "^1.1.3",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
